service.yml
apiVersion: v1
kind: Service
metadata:
  name: $GKE_SERVICE
  #labels:
  #  purpose: bsc-config-demo
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"my-backendconfig"}}'
    cloud.google.com/neg: '{"ingress": true}'  
spec:
  type: ClusterIP #LoadBalancer
  selector:
    app: $GKE_APP_NAME
    purpose: $GKE_APP_NAME
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
#  - port: 80
#    targetPort: 8080
